--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Quotes about feminism</title>
+        <title>My Real Website</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -21,16 +21,36 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <section class="wrapper">
-          <div class="div-1">
-              <p>"It's important to teach our female youth that it's OK to say, 'Yes, I am good at this,' and you don't hold back." <span> - Simone Biles</span></p>
+        <section class="flex-container">
+
+          <header>
+              <h1>Hi. I'm Belle.</h1>
+          </header>
+
+          <main>
+              <p>Ut pro et ut aperibea am iumqui bernate vel ipsundi tatatur reperum ut quissunt offici nectectat qui temporr orenimet voluptatur as es acepuda corestemqui andis voluptas dolore nis debit, quate secerum omnis nobitat enderuptatus aut.</p>
+          </main>
+
+          <div id="div-1" class="flex-items">
+              <p>Lab ipiet voluptae labo. Musam alibus int doluptatis et moditiur, omnis nobitat enderuptatus aut laut vent omnis is imil ipsuntem assenim aionsequam quis alistis sintiatibus et velesti beriatur.</p>
           </div>
-          <div class="div-2">
-              <p> "No woman should be told she can't make decisions about her own body. When women's rights are under attack, we fight back. <span> - Kamala Harris</span></p>
+
+          <div id="div-2" class="flex-items">
+              <p>Earumquae aute il ide cori odi incteceptat eum, quae provita sperit lacid utet moditates eat volumquo voluptat ad utatur aut lam iliqui.</p>
           </div>
-          <div class="div-3">
-            <p> "We need to reshape our own perception of how we view ourselves. We have to step up as women and take the lead." <span> - Beyoncé</span></p>
+
+          <div id="div-3" class="flex-items">
+            <p>Onem nobisque seriatet venda aut aut et aut ande dolorrovita qui reperfe rferum reperrovit utempelita venisci umquasi tatemqui re aut ducid quis moluptatet earumque dis as as elia quodio. </p>
           </div>
+
+          <footer>
+              <ol>
+                <li> <img src="img/facebook-24.png" alt="Facebook"></li>
+                <li> <img src="img/twitter-24.png" alt="Twitter"></li>
+                <li> <img src="img/instagram-24.png" alt="Instagram"></li>
+              </ol>
+          </footer>
+
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
